--- a/jsoneditor/css/contextmenu.css
+++ b/jsoneditor/css/contextmenu.css
@@ -3,7 +3,7 @@
 
 .jsoneditor-contextmenu {
     position: absolute;
-    z-index: 999;
+    z-index: 99999;
 }
 
 .jsoneditor-contextmenu ul {
